<resources>

    <string name="google_maps_Api_Key" translatable="false">AIzaSyCN5cMJTuLkjtWYSlgMe-oEZw804eqWZ8o</string>
    <string name="facebook_app_id" translatable="false">552464421783681</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb552464421783681</string>

    <string name="estmain_time" translatable="false">0:%1$s</string>


    <string name="app_name">Aqarat</string>
    <string name="loading_str">Loading</string>
    <string name="plz_wait">Please Wait</string>
    <string name="no_connect">No Connection</string>
    <string name="connect_snackbar">Connect</string>
    <string name="server_down">Somthing Wrong Try again</string>
    <string name="falid_facebook">Cannot Connect to Facebook right now</string>
    <string name="sucsess_dialog_str">Successfully Operation</string>
    <string name="click_here">Click here</string>
    <string name="contact_us_str">Contact US</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="login_str">Login</string>
    <string name="select_img">Select Picture</string>
    <string name="ticket_detail">Ticket Details</string>
    <string name="valid_user">User Name Must be At Least 6 Char</string>
    <string name="valid_number">Number Not Valid</string>
    <string name="valid_email">Email Not Valid</string>
    <string name="valid_pass">Password Must be at least 6 Char</string>
    <string name="valid_confirm">Passwords Not Matched</string>
    <string name="valid_address">Address Must be Not Empty</string>
    <string name="valid_neighborhood">Neighborhood Must be not Empty</string>
    <string name="send_email">Send Email</string>
    <string name="no_email_client">No Email Client</string>
    <string name="valid_active_account">Please Active Your Account</string>
    <string name="activation_code_str">Activation Code</string>
    <string name="new_user_str">New User?</string>
    <string name="send_message">Send Message</string>
    <string name="pass_chng_succ">Password Changed Successful</string>
    <string name="accept_policy_reg">Please Accept the Terms of Use</string>
    <string name="acsess_denied">Access is Denied</string>
    <string name="there_s_no_items">There\'s No Items</string>
    <string name="about_us_str">About US</string>
    <string name="upload_photo_str">Upload Photo</string>
    <string name="valid_message">Please enter Valid Message</string>
    <string name="valid_reason_name">reason must be At Least 6 char</string>
    <string name="valid_describtion">Description must be at least 10 char</string>
    <string name="write_message">Write Message....</string>
    <string name="no_num_contact">No Contact number</string>
    <string name="visit_us">Visit US</string>
    <string name="valid_location">Locations Must be Defined</string>
    <string name="open_gps_msg">please open gps provider</string>
    <string name="yes_gps_btn">Yes</string>
    <string name="no_gps_btn">No</string>
    <string name="select_coord_map">Plase Select Coordinates</string>
    <string name="loc_permission_need">Location Permission Needed</string>
    <string name="app_need_location_permission">This app needs the Location permission, please accept to use location functionality</string>
    <string name="suc_prof_uptd">Successfully Profile Changed</string>
    <string name="all_regions_str">All Regions</string>
    <string name="amount_str">Amount</string>
    <string name="bank_information_str">Bank Information</string>
    <string name="bank_name_str">Bank Name</string>
    <string name="account_name_str">Account Name</string>
    <string name="account_number_str">Account Number</string>
    <string name="transfer_information_str">Transfer Information</string>
    <string name="legal_name_str">Legal Name</string>
    <string name="process_number_str">Process Number</string>
    <string name="done_str">Done</string>
    <string name="valid_amount">Please Enter Transaction Amount</string>
    <string name="valid_legal_name">Please Enter Account Legal Name</string>
    <string name="valid_process_number">Please Enter Process Number</string>
    <string name="land_str">Lands</string>
    <string name="real_estate_str">Real Estate</string>
    <string name="wish_list_str">My Wish List</string>
    <string name="search_str">Search</string>
    <string name="closed_str">Closed</string>
    <string name="close_str">Close</string>
    <string name="verification_code_str">Verification Code</string>
    <string name="new_password_str">New Password</string>
    <string name="confirm_password_str">Confirm Password</string>
    <string name="reset_str">Reset</string>
    <string name="see_more_str">See More</string>
    <string name="remove_from_wish_list_str">Remove from Wish List</string>
    <string name="deactivate_str">Deactivate</string>
    <string name="register_str">Register</string>
    <string name="username_str">UserName</string>
    <string name="phone_str">Phone</string>
    <string name="email_str">Email</string>
    <string name="confirm_str">Confirm</string>
    <string name="password_str">Password</string>
    <string name="i_have_read_and_agree_to_the_str">I have Read and Agree to the</string>
    <string name="terms_of_agreement_str">Terms Of Agreement</string>
    <string name="sign_up_str">Sign Up</string>
    <string name="already_member_str">Already Member</string>
    <string name="or_sign_up_with_str">Or Sign up With</string>
    <string name="type_str">Type</string>
    <string name="area_str">Area</string>
    <string name="monthly_rent_total_price_str">Monthly Rent/Total Price</string>
    <string name="address_str">Address</string>
    <string name="no_of_rooms_str">No Of Rooms</string>
    <string name="no_of_bathrooms_str">No Of Bathrooms</string>
    <string name="floor_number_str">Floor Number</string>
    <string name="number_of_floors_str">Number Of Floors</string>
    <string name="finishing_type_str">Finishing Type</string>
    <string name="description_str">Description</string>
    <string name="add_to_wish_list_str">Add to Wish List</string>
    <string name="leave_a_comment_str">Leave a Comment</string>
    <string name="your_comment_str">Your Comment …</string>
    <string name="comment_str">Comment</string>
    <string name="number_of_ads_str">Number of ads</string>
    <string name="duration_str">Duration</string>
    <string name="price_str">Price</string>
    <string name="payment_method_str">Payment Method</string>
    <string name="bank_transfer_str">Bank Transfer</string>
    <string name="vodafone_cash_str">Vodafone cash</string>
    <string name="apartments_str">Apartments</string>
    <string name="home_str">Home</string>
    <string name="forget_password_str">Forget Password?</string>
    <string name="or_login_with_str">Or Login With</string>
    <string name="skip_str">SKIP</string>
    <string name="select_your_interested_items_please_str">Select Your Interested Items Please :)</string>
    <string name="select_all_str">Select All</string>
    <string name="unselect_all_str">UnSelect all</string>
    <string name="update_str">Update</string>
    <string name="send_code_str">Send Code</string>
    <string name="enter_your_email_to_receive_a_verification_code_to_change_your_password_str">Enter your email to receive a verification code to change your password</string>
    <string name="filter_str">Filter</string>
    <string name="apartment_str">Apartment</string>
    <string name="price_range_str">Price Range:</string>
    <string name="from_str">From</string>
    <string name="to_str">TO</string>
    <string name="area_m2_str">Area(m2):</string>
    <string name="numbers_of_rooms_str">Numbers of Rooms:</string>
    <string name="apply_str">Apply</string>
    <string name="faq_STR">FAQ</string>
    <string name="reason_str">Reason</string>
    <string name="old_password_str">Old Password</string>
    <string name="change_password_str">Change Password</string>
    <string name="resend_code_str">Resend Code</string>
    <string name="add_post_str">Add Post</string>
    <string name="normal_ad_str">Normal AD</string>
    <string name="special_ad_str">Special AD</string>
    <string name="rent_negotiable_str">Rent Negotiable?</string>
    <string name="chng_lang_str">Change Language</string>
    <string name="my_ticket_str">My Tickets</string>
    <string name="create_tickt_str">Create Ticket</string>
    <string name="my_ads_str">My Ads</string>
    <string name="new_ad_str">New Ad</string>
    <string name="all_ads_str">All ads</string>
    <string name="details_str">Details</string>
    <string name="upd_prof_str">Update Profile</string>
    <string name="my_search_str">My Search</string>
    <string name="my_interested_str">My Interested</string>
    <string name="all_intered_str">All Interested</string>
    <string name="prem_req_str">Premium Request</string>
    <string name="filter_by_str">Filter By:</string>
    <string name="cancel_str">Cancel</string>
    <string name="messages">Messages</string>
    <string name="my_notifications">My Notifications</string>
    <string name="u_are_not_vip_str">You Are Not vip Please upgrade Your Account</string>
    <string name="ok_dialog_str">OK</string>


    <string name="close_nav">Close</string>
    <string name="upd_prf_nav">Update Profile</string>
    <string name="chng_lang_nav">Change Language</string>
    <string name="chng_pas_nav">Change Password</string>
    <string name="my_ads_nav">My ADS</string>
    <string name="my_nter_nav">My Interested</string>
    <string name="becom_prem_nav">Become Premium</string>
    <string name="ticket_nav">Tickets</string>
    <string name="my_notify_nav">My Notifications</string>
    <string name="my_messages_nav">My Messages</string>
    <string name="shar_nav">Share</string>
    <string name="faq_nav">Faq</string>
    <string name="contact_us_nav">Contact US</string>
    <string name="about_us_nav">About Us</string>
    <string name="logout_nav">Logout</string>
    <string name="login_nav">Login</string>
    <string name="register_nav">Register</string>
    <string name="oops_str">Oops…</string>

</resources>
