<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_scroll_add"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/main_add_post_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="vertical"
        tools:context="com.sawa.aqarat.Activities.Add_post_Activ">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <hu.aut.utillib.circular.widget.CircularFrameLayout
                android:id="@+id/simple_reveal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/circle_shape_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="90dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/corner_shape_top" />

                    <TextView
                        android:id="@+id/title_act_name"
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:text="@string/add_post_str"
                        android:textColor="@color/white_one"
                        android:textSize="19sp" />

                    <Button
                        android:id="@+id/back_btn"
                        android:layout_width="20dp"
                        android:layout_height="25dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/left_arrow_icon"
                        android:scaleType="fitXY" />

                </RelativeLayout>

            </hu.aut.utillib.circular.widget.CircularFrameLayout>

        </RelativeLayout>


        <RadioGroup
            android:id="@+id/user_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/normal_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="5dp"
                android:checked="true"
                android:text="@string/normal_ad_str"
                android:textColor="@color/gray" />

            <RadioButton
                android:id="@+id/special_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/special_ad_str"
                android:textColor="@color/gray" />

        </RadioGroup>

        <Spinner
            android:id="@+id/spinner_city"
            style="@style/spinner_shape_style"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:dropDownVerticalOffset="30dp"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinner_region"
            style="@style/spinner_shape_style"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:dropDownVerticalOffset="30dp"
            android:spinnerMode="dropdown" />


        <RadioGroup
            android:id="@+id/category_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/appartment_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="5dp"
                android:checked="true"
                android:text="@string/apartment_str"
                android:textColor="@color/gray" />

            <RadioButton
                android:id="@+id/lands_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/land_str"
                android:textColor="@color/gray" />

        </RadioGroup>


        <Spinner
            android:id="@+id/spinner_sub_cat"
            style="@style/spinner_shape_style"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:dropDownVerticalOffset="30dp"
            android:spinnerMode="dropdown" />


        <Spinner
            android:id="@+id/spinner_finishing_Type"
            style="@style/spinner_shape_style"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:dropDownVerticalOffset="30dp"
            android:spinnerMode="dropdown" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_address"
                style="@style/editText_shape_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:hint="@string/address_str"
                android:inputType="textLongMessage"
                android:maxLines="1"
                android:textColor="@color/purple_color"
                android:textColorHint="@color/purple_light_color" />

            <ImageButton
                android:id="@+id/map_loc_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="0.1"
                android:background="@drawable/map_pin_icon" />

        </LinearLayout>


        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map_add_post"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            class="com.sawa.aqarat.utilities.WorkaroundMapFragment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:cameraZoom="12"
            app:mapType="normal" />


        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_description"
            style="@style/editText_shape_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_str"
            android:inputType="textLongMessage"
            android:maxLines="1"
            android:textColor="@color/purple_color"
            android:textColorHint="@color/purple_light_color" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_area"
            style="@style/editText_shape_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/area_m2_str"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/purple_color"
            android:textColorHint="@color/purple_light_color" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_room_num"
                style="@style/editText_shape_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/no_of_rooms_str"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/purple_color"
                android:textColorHint="@color/purple_light_color" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_floors_num"
                style="@style/editText_shape_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/number_of_floors_str"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/purple_color"
                android:textColorHint="@color/purple_light_color" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_bathroom_num"
                style="@style/editText_shape_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/no_of_bathrooms_str"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/purple_color"
                android:textColorHint="@color/purple_light_color" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_apart_floor_num"
                style="@style/editText_shape_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/floor_number_str"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/purple_color"
                android:textColorHint="@color/purple_light_color" />

        </LinearLayout>


        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_cost_price"
            style="@style/editText_shape_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/monthly_rent_total_price_str"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/purple_color"
            android:textColorHint="@color/purple_light_color" />


        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/negotiable_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/rent_negotiable_str"
            android:textColor="@color/purple_color"
            android:textSize="15sp"
            app:buttonTint="@color/purple_color" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/upload_photo_str"
            android:textColor="@color/purple_color"
            android:textSize="16sp"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/get_images2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/add_photo"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:id="@+id/hori_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false"
            android:foregroundGravity="left">


            <LinearLayout
                android:id="@+id/selected_photos_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:animateLayoutChanges="true"
                android:gravity="start"
                android:orientation="horizontal"
                android:visibility="visible">


                <!-- images will be added dynamicall to this layout -->
            </LinearLayout>
        </HorizontalScrollView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center">


            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/button_purple"
                android:minHeight="30dp"
                android:minWidth="120dp"
                android:text="@string/confirm_str"
                android:textAllCaps="false"
                android:textColor="@color/white_one"
                android:textSize="18sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/edittext_circle_img"
                android:minHeight="30dp"
                android:minWidth="120dp"
                android:text="@string/cancel_str"
                android:textAllCaps="false"
                android:textColor="@color/purple_color"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">


            <hu.aut.utillib.circular.widget.CircularFrameLayout
                android:id="@+id/simple_reveal_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/circle_shape_lay_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:background="@drawable/corner_shape_bottom" />

                </RelativeLayout>

            </hu.aut.utillib.circular.widget.CircularFrameLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>