<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="40dp"
        app:cardBackgroundColor="@color/background_color">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/locker_small_icon" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_verfy_code"
                style="@style/editText_shape_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:hint="@string/verification_code_str"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/purple_color"
                android:textColorHint="@color/purple_light_color" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_new_password"
                style="@style/editText_shape_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:hint="@string/new_password_str"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/purple_color"
                android:textColorHint="@color/purple_light_color" />




            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_old_password"
                style="@style/editText_shape_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:hint="@string/confirm_password_str"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/purple_color"
                android:textColorHint="@color/purple_light_color" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">


                <Button
                    android:id="@+id/cancel_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_purple"
                    android:minHeight="35dp"
                    android:minWidth="150dp"
                    android:text="@string/cancel_str"
                    android:textAllCaps="false"
                    android:textColor="@color/white_one"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/reset_pass_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_purple"
                    android:minHeight="35dp"
                    android:minWidth="150dp"
                    android:text="@string/reset_str"
                    android:textAllCaps="false"
                    android:textColor="@color/white_one"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>